--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+html, body{
+    box-sizing: border-box;
+    margin: 0;
+}
 body{
     color:black;
-    background-color: peru;
+    background-color: rgb(224, 115, 5);
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+header{
+    background-color: rgb(19, 19, 114);
+    display: flex;
+    justify-content: space-between;
+}
+header img{
+    height: 100px;
+}
+header nav{
+    color: blanchedalmond;
+    display: flex;
+    align-items: center;
 }
